# MutatrisHD

./: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  README.txt  config.h  config.h.in~  config.status  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
mutatris/: MX_interface.cc  MX_interface.cpp  MX_interface.h  Makefile  Makefile.am  Makefile.in  MutatrisHD  cmx_font.h  cmx_video.h  font_source.cc  loadbmp.cpp  mpmut.cc  mpmut.cpp  mpmut.h  mutatris3d.cc  mutatris3d.cpp  types.cc  video.cc
mutatris/.deps/: MX_interface.Po  fixedsys.Po  font_source.Po  loadbmp.Po  mpmut.Po  mutatris3d.Po  types.Po  video.Po
mutatris/img/: Thumbs.db
