AM_CXXFLAGS = -std=c++11 -O2 $(LIBSDL_CFLAGS) -I$(top_srcdir)/include -I$(prefix)/include 
AM_LDFLAGS = $(LIBSDL_LIBS) $(LIBGLEW_GLEWLIB) #$(prefix)/lib/libpng.a $(prefix)/lib/libz.a
bin_PROGRAMS=MutatrisHD
MutatrisHD_SOURCES=fixedsys.cc font_source.cc loadbmp.cc mpmut.cc mutatris3d.cc types.cc video.cc MX_interface.cc


